# ros2_projects2

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kimera_multi/share/kimera_multi/: package.bash  package.zsh
install/my_dd_robot/share/my_dd_robot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_ddrobot/share/my_ddrobot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_gesture_arm/lib/my_gesture_arm/: auto_navigator.py  autonomous_robot_controller.py  teleop_controller.py
install/my_gesture_arm/share/my_gesture_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot/share/my_robot/: local_setup.bash  (+7 more)
log/: latest_build  latest_list
src/my_ddrobot/: CMakeLists.txt  package.xml
src/my_ddrobot/launch/: dd_robot.launch.py
src/my_ddrobot/model/: my_dd_robot.gazebo  my_dd_robot_model.xacro  my_robot.urdf
src/my_gesture_arm/: .setup_assistant  CMakeLists.txt  package.xml
src/my_gesture_arm/config/: controllers.yaml
src/my_gesture_arm/launch/: dd_robot.launch.py
src/my_gesture_arm/model/: empty_world.world  gesture_arm.gazebo  my_gesture_arm.xacro  task_world.world
src/my_gesture_arm/model/install/: setup.bash
src/my_gesture_arm/scripts/: autonomous_robot_controller.py  teleop_controller.py
src/navigation_tb3/: CMakeLists.txt
(+88 files in other folders)
